# meeting-summarizer-kit

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: action-items.json  recap-quality.json  run.py
examples/: walkthrough.md  zoom_to_linear.py
fixtures/: 01-product-sync.txt  02-zoom-recording.vtt  03-customer-call.srt  04-otter-transcript.json
src/meeting_summarizer/: __init__.py  cli.py  extractor.py  summarizer.py  transcript.py
tests/: test_extractor.py  test_summarizer.py  test_transcript.py
